fixed spacing

--- a/src/components/dashboard.component.css
+++ b/src/components/dashboard.component.css
@@ -23,4 +23,5 @@ p {
 }
 
 #file-upload-section {
+  margin-bottom: 10vh;
 }
